test/files/errors/multipleFnSameName.jg
lol int ()
{

}

lol string ()
{

}

# "Error: Compiler was unable to compile the code (AST->IST), reason: Can't compile sequence -> Function already defined: lol"